<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.apps.iosched.ui.widget.DashboardLayout android:background="#fff8f9fe" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <Button android:id="@id/btn_lookup" android:text="@string/btn_lookup" android:drawableTop="@drawable/search" style="@style/DashboardButton" />
        <Button android:id="@id/btn_new_meal" android:text="@string/btn_new_meal" android:drawableTop="@drawable/meal" style="@style/DashboardButton" />
        <Button android:gravity="center_horizontal" android:id="@id/btn_history" android:text="@string/btn_history" android:drawableTop="@drawable/history" style="@style/DashboardButton" />
        <Button android:id="@id/btn_settings" android:text="@string/btn_settings" android:drawableTop="@drawable/settings" style="@style/DashboardButton" />
    </com.google.android.apps.iosched.ui.widget.DashboardLayout>
</RelativeLayout>