<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:gravity="center" android:id="@id/textView2" android:background="@color/color_breakfast" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/breakfast" android:layout_weight="1.0" />
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:gravity="center" android:id="@id/textView1" android:background="@color/color_lunch" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lunch" android:layout_weight="1.0" />
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:gravity="center" android:id="@id/textView3" android:background="@color/color_diner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/diner" android:layout_weight="1.0" />
    </LinearLayout>
    <ListView android:id="@id/history_list" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</LinearLayout>