<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="Amount" />
        <EditText android:textAppearance="?android:textAppearanceLarge" android:id="@id/amount_textfield" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:inputType="number">
            <requestFocus />
        </EditText>
        <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/amount_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="gram" />
    </LinearLayout>
    <RadioGroup android:id="@id/radioGroup_mealtime" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioButton android:textAppearance="?android:textAppearanceLarge" android:id="@id/radio_breakfast" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:checked="true" android:text="@string/breakfast" />
        <RadioButton android:textAppearance="?android:textAppearanceLarge" android:id="@id/radio_lunch" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/lunch" />
        <RadioButton android:textAppearance="?android:textAppearanceLarge" android:id="@id/radio_diner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="20.0dip" android:text="@string/diner" />
    </RadioGroup>
</LinearLayout>